# module_37

calculator/: CMakeLists.txt
calculator/include/: calculator.h
calculator/src/: CMakeLists.txt  calculator.cpp  calculator.ui  main.cpp
player/: CMakeLists.txt  main.qml
remote_control/: CMakeLists.txt
remote_control/include/: remote_control.h
remote_control/src/: CMakeLists.txt  main.cpp  remote_control.ui
